--- a/index.html
+++ b/index.html
@@ -107,18 +107,19 @@ document.addEventListener('DOMContentLoaded', function(e) {
           <div id="about-me" class="section level2">
           <h2>About Me</h2>
           <p>I am a postdoctoral researcher in the <a href="https://www.montana.edu/earthsciences/">Department of
-          Earth Sciences</a> at Montana State University <br> My current
-          research investigates the dynamics of human-environment
-          relationships between urban growth, demographic change,
-          extreme heat and food security in Africa <br>
-          Methodologically, my work in interdisciplinary in nature. I
-          mainly focus on the integration of social and environmental
+          Earth Sciences</a> at Montana State University.<br />
+          <br> My current research investigates the dynamics of
+          human-environment relationships between urban growth,
+          demographic change, extreme heat and food security in
+          Africa.<br />
+          <br> Methodologically, my work in interdisciplinary in nature.
+          I mainly focus on the integration of social and environmental
           data using GIS and spatial analysis alongside econometric and
           statistical modelling. Much of the data I use is derrived from
           satellites, where I integrate them with large-scale household
-          surveys in both rural and urban settings. <br> For more
-          information about my research, interests or potential
-          collaboration, please get in touch. <br></p>
+          surveys in both rural and urban settings. <br></p>
+          <p>For more information about my research, interests or
+          potential collaboration, please get in touch. <br></p>
           </div>
         </div>
       </div>
@@ -171,19 +172,20 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <div id="about-me" class="section level2">
               <h2>About Me</h2>
               <p>I am a postdoctoral researcher in the <a href="https://www.montana.edu/earthsciences/">Department
-              of Earth Sciences</a> at Montana State University <br> My
-              current research investigates the dynamics of
+              of Earth Sciences</a> at Montana State University.<br />
+              <br> My current research investigates the dynamics of
               human-environment relationships between urban growth,
               demographic change, extreme heat and food security in
-              Africa <br> Methodologically, my work in interdisciplinary
-              in nature. I mainly focus on the integration of social and
+              Africa.<br />
+              <br> Methodologically, my work in interdisciplinary in
+              nature. I mainly focus on the integration of social and
               environmental data using GIS and spatial analysis
               alongside econometric and statistical modelling. Much of
               the data I use is derrived from satellites, where I
               integrate them with large-scale household surveys in both
-              rural and urban settings. <br> For more information about
-              my research, interests or potential collaboration, please
-              get in touch. <br></p>
+              rural and urban settings. <br></p>
+              <p>For more information about my research, interests or
+              potential collaboration, please get in touch. <br></p>
               </div>
             </div>
         </div>
